# fallacy_tree

./: Cargo.toml  fallacy_tree.js  fallacy_tree_bg.wasm  index.html
docs/: fallacy_tree.js  index.html
src/: app.rs  lib.rs  main.rs
